permalink: whats-new.html 
keywords: 'what"s new, features, new, release notes, bugs, limitations, known issues, enhancements, fixes, cloud manager' 
summary: Scopri le novità di Amazon FSX per NetApp ONTAP. 
---
= Novità di Amazon FSX per NetApp ONTAP
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
Scopri le novità di FSX per ONTAP.



== 02 marzo 2025



=== Eventi CloudShell in Tracker

Ogni volta che usi CloudShell per eseguire operazioni FSX per ONTAP dai carichi di lavoro BlueXP , gli eventi appariranno in Tracker.

link:https://docs.netapp.com/us-en/bluexp-fsx-ontap/use/task-monitor-operations.html["Scopri come monitorare e monitorare le operazioni di FSX per ONTAP in BlueXP "^]



== 02 febbraio 2025



=== Associa il file system FSX per ONTAP a un'area di lavoro in BlueXP 

Dopo l'integrazione di BlueXP  nel novembre 2024, i file system FSX per ONTAP appena creati non erano associati a un'area di lavoro in BlueXP . Ora che create o scoprite file system FSX per ONTAP, questi sono associati a un'area di lavoro all'interno di un account BlueXP .

Se esistono file system FSX per ONTAP non associati a un'area di lavoro, sarà possibile associarli a un'area di lavoro in BlueXP . È possibile link:https://docs.netapp.com/us-en/bluexp-setup-admin/task-get-help.html#create-a-case-with-netapp-support["Crea un caso con il supporto NetApp"^] dall'interno della console BlueXP . Selezionare *workload Factory* come servizio.



=== Rimozione del file system da BlueXP  Canvas

Ora puoi rimuovere un file system FSX per ONTAP da un'area di lavoro in BlueXP  Canvas. Questa operazione dissocia il file system da un'area di lavoro in modo che sia possibile associarlo a un'altra area di lavoro all'interno dello stesso account BlueXP .

link:https://docs.netapp.com/us-en/bluexp-fsx-ontap/use/task-remove-filesystem.html["Scopri come rimuovere un file system FSX per ONTAP da un'area di lavoro in BlueXP "^]


