@@ -345,7 +345,6 @@
   <block id="ef7fe40c036b5b08d74837dcb702dc33" category="inline-image-macro">Una schermata che mostra gli elementi da definire manualmente per ogni set di credenziali.</block>
   <block id="083fb8583b0a2366ef9a94388dd9640f" category="paragraph"><block ref="083fb8583b0a2366ef9a94388dd9640f" category="inline-image-macro-rx" type="image"></block></block>
   <block id="445f4ba50fbc8e7b285aedb4396412bb" category="inline-image-macro">Uno screenshot che mostra quali tipi di funzionalità del carico di lavoro saranno gestibili come parte delle policy in queste credenziali.</block>
-  <block id="0edc9a25423073fcc768405f6aeda88b" category="paragraph"><block ref="0edc9a25423073fcc768405f6aeda88b" category="inline-image-macro-rx" type="image"></block></block>
   <block id="eb73cd2a4bbc3dbb4bbab5f5a9b6fb8d" category="list-text">Nella sezione *Crea criteri*, abilitare ciascuna funzionalità del carico di lavoro che si desidera includere in queste credenziali. Abilitare *Storage* per creare e gestire file system.</block>
   <block id="3b9b789374908017040d97f81eb4008d" category="paragraph">Puoi aggiungere funzionalità in un secondo momento, quindi seleziona solo i carichi di lavoro da implementare e gestire.</block>
   <block id="a488a73463d70a082950f1cd09a4be8c" category="inline-link-macro">Informazioni sulle autorizzazioni, note anche come modalità operative</block>
@@ -653,4 +652,12 @@
   <block id="fd8693cf8f6802fd1c7d50d5742a4c71" category="doc">Eventi CloudShell in Tracker</block>
   <block id="de57e19ed3d5b873e357689269de25a1" category="paragraph">Ogni volta che usi CloudShell per eseguire operazioni FSX per ONTAP dai carichi di lavoro BlueXP , gli eventi appariranno in Tracker.</block>
   <block id="2d5a4b914acb6c2f03d312067c73ce32" category="section-title">02 marzo 2025</block>
+  <block id="4ef50e373522b91f7df59d5cba69a8b7" category="doc">iam:aggiornamento autorizzazioni SimulatePermissionPolicy</block>
+  <block id="b84cda7d6006e8abb6e6264e292b13c0" category="paragraph">Ora puoi gestire l'<block ref="19f5de89e4c667692a153296018e225f" prefix=" " category="inline-code"></block>autorizzazione dalla console BlueXP  quando Aggiungi ulteriori credenziali di account AWS o Aggiungi una nuova funzionalità del workload come il workload Genai.</block>
+  <block id="6cff628e35cc5d429a57e4a125a0bf6b" category="inline-link-macro">Registro delle modifiche di riferimento delle autorizzazioni</block>
+  <block id="8ee0913e940253bb841c1a05228d81e5" category="paragraph"><block ref="8ee0913e940253bb841c1a05228d81e5" category="inline-link-macro-rx"></block></block>
+  <block id="c1bc5d8eeb872326cb512499f02befb5" category="paragraph"><block ref="c1bc5d8eeb872326cb512499f02befb5" category="inline-image-macro-rx" type="image"></block></block>
+  <block id="04c38dfa84592feebab3e30dfe4a019a" category="list-text">Facoltativo: Selezionare *Abilita controllo automatico autorizzazioni* per verificare se si dispone delle autorizzazioni necessarie per completare le operazioni del carico di lavoro. L'attivazione del segno di spunta aggiunge<block ref="23bd3e826a13b6d94db9e07f105dfed2" prefix=" " category="inline-code"></block> ai criteri di autorizzazione. Lo scopo di questa autorizzazione è solo confermare le autorizzazioni. È possibile rimuovere l'autorizzazione dopo aver aggiunto le credenziali, ma si consiglia di conservarla per evitare la creazione di risorse per operazioni parzialmente riuscite e per evitare di eliminare qualsiasi pulitura manuale delle risorse richiesta.</block>
+  <block id="c3c7c9c146408a0ee564eedba4821f52" category="list-text">Facoltativo: Selezionare *Abilita controllo automatico autorizzazioni* per verificare se si dispone delle autorizzazioni necessarie per completare le operazioni del carico di lavoro. L'attivazione del controllo aggiunge l'<block ref="19f5de89e4c667692a153296018e225f" prefix=" " category="inline-code"></block>autorizzazione ai criteri di autorizzazione. Lo scopo di questa autorizzazione è solo confermare le autorizzazioni. È possibile rimuovere l'autorizzazione dopo aver aggiunto le credenziali, ma si consiglia di conservarla per evitare la creazione di risorse per operazioni parzialmente riuscite e per evitare di eliminare qualsiasi pulitura manuale delle risorse richiesta.</block>
+  <block id="db54384248c75c5896f34bcb0879b66c" category="section-title">30 marzo 2025</block>
 </blocks>
