@@ -18,6 +18,18 @@ Scopri le novità di FSX per ONTAP.
 
 
 
+== 30 marzo 2025
+
+
+
+=== iam:aggiornamento autorizzazioni SimulatePermissionPolicy
+
+Ora puoi gestire l' `iam:SimulatePrincipalPolicy`autorizzazione dalla console BlueXP  quando Aggiungi ulteriori credenziali di account AWS o Aggiungi una nuova funzionalità del workload come il workload Genai.
+
+link:https://docs.netapp.com/us-en/workload-setup-admin/permissions-reference.html#change-log["Registro delle modifiche di riferimento delle autorizzazioni"^]
+
+
+
 == 02 marzo 2025
 
 
